# python-project-50

./: .gitignore  Makefile  README.md  file02.yml  gendiff_lib.py  pyproject.toml
.github/workflows/: lint-test-diff.yml  main.ymd
hexlet_code/: build_diff_tree.py  gendiff.py  gendiff_yml.py  read_file.py  read_filee.py  stylish_tree.py
hexlet_code/scripts/: gendiff.py  gendiff.txt  gendiff_script.py  gendiff_yml.py  generate.py  read_file.py
tests/: test_gendiff.py  test_gendiff_for_yaml.py
